# SwTokenizer

./: README.md  coverage_report.py  failures.txt  find_missing_tokens.py  morphemes.csv  pyproject.toml  successes.txt  swahili_tokenizer.py  token_analyzer.py
tests/: sw_morphs.yaml  test_sw_tokenizer.py
