[tool.poetry]
name = "transformers-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.43.3"
datasets = "^2.20.0"
mwparserfromhell = "^0.6.6"
accelerate = "^0.32.1"
huggingface-hub = "^0.23.4"
bitsandbytes = "^0.43.1"
setuptools = "^72.1.0"
torch = {version = "^2.5.0+cu124", source = "torch"}
lark = "^1.2.2"


matplotlib = "^3.9.2"
seaborn = "^0.13.2"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"
